force-app/main/default/objects/WeeklyManagement__c/WeeklyManagement__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena la gestión semanal de los usuarios, como por ejemplo cuando lo han completado, y el comentario semanal que ponen. Con ello sabemos quién ha completado todo dada una semana</description>
    <label>Weekly Management</label>
    <nameField>
        <displayFormat>WKM-{00000000}</displayFormat>
        <label>Weekly Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>