force-app/main/default/objects/WeeklyManagement__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comentario semanal del usuario que rellena al enviar el report semanal</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>