force-app/main/default/objects/WeeklyManagement__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>Cuando se ha completado y enviado el report semanal</description>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>