force-app/main/default/objects/WeeklyManagement__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>Fecha fin de la semana del report</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>