force-app/main/default/objects/WeeklyManagement__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>Fecha ini de la semana del report</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>