force-app/main/default/objects/WeeklyManagement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EVENT</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
            <value>
                <fullName>KEYACCOUNT</fullName>
            </value>
            <value>
                <fullName>KEYOPPORTUNITY</fullName>
            </value>
            <value>
                <fullName>KEYACCOUNTCOMMENT</fullName>
            </value>
            <value>
                <fullName>KEYOPPORTUNITYCOMMENT</fullName>
            </value>
            <value>
                <fullName>REPORTSENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>